--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,9 @@
   width: 200px;
   background-color: blue;
   border-radius: 50%;
-  float: right; }
+  float: right;
+}
 
-/*# sourceMappingURL=main.css.map */
+.circle-group-one {
+
+}
