--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
   width: 200px;
   background-color: blue;
   border-radius: 50%;
-  float: right;
+  float: left;
 }
 
 .circle-group-one {
@@ -14,6 +14,16 @@
   visibility: hidden;
 }
 
+.descrip-company-one, .descrip-company-two, .descrip-company-three, .descrip-company-four, .descrip-company-five, .descrip-company-six {
+  visibility: hidden;
+}
+
+.descrip-company {
+  color: black;
+}
+
+
+
 .client-circle:hover {
   background-color: red;
 
@@ -21,3 +31,5 @@
   visibility: visible;
   }
 }
+
+
