--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 .circle-company {
   visibility: hidden; }
 
-.descrip-company-one, .descrip-company-two, .descrip-company-three, .descrip-company-four, .descrip-company-five, .descrip-company-six {
+.descrip-company-Vulcan, .descrip-company-Raikes, .descrip-company-Stolen-Youth, .descrip-company-FareStart, .descrip-company-YouthCare, .descrip-company-Friends-of-Youth {
   visibility: hidden; }
 
 .descrip-company {
@@ -18,5 +18,23 @@
   background-color: red; }
   .client-circle:hover .circle-company {
     visibility: visible; }
+
+.Vulcan-cir:hover .descrip-company-Vulcan {
+  visibility: visible; }
+
+.Raikes-cir:hover .descrip-company-Raikes {
+  visibility: visible; }
+
+.Stolen-Youth-cir:hover .descrip-company-Stolen-Youth {
+  visibility: visible; }
+
+.FareStart-cir:hover .descrip-company-FareStart {
+  visibility: visible; }
+
+.YouthCare-cir:hover .descrip-company-YouthCare {
+  visibility: visible; }
+
+.Friends-of-Youth-cir:hover .descrip-company-Friends-of-Youth {
+  visibility: visible; }
 
 /*# sourceMappingURL=main.css.map */
